# AIBEES-5_Classes

./: .gitignore  README.md  environment_instructions.txt  pyproject.toml
GenAI/: 3.llm_with_ui.py  4.few_shot_prompting.py
GenAI/Enterprise_RAG_Setup/: .rag_config.json  README.md  app.py  config.py  requirements.txt  step_01_setup_gcs.py  step_02_create_index.py  step_03_ingest.py  step_04_query.py
GenAI/Evaluation/: evaluation.py  products.json  summary_evaluation_results.json
GenAI/GCP_RAG_FastAPI/: Readme.md  main.py  rag_engine.py
GenAI/Incident_summarization_lab/: inc_summarizer.py  step1_output.csv
GenAI/Incremental_RAG/: IT_Knowledge_chatbot.py
GenAI/Incremental_RAG/faiss_store/: registry.json
GenAI/Incremental_RAG/faiss_store/combined_index/: index.faiss  index.pkl
GenAI/RAG/: IT_helpdesk_chatbot.py
GenAI/RAG/faiss_store/628b8a1ec8a8d8897ab04667fa9cb474/: index.faiss  index.pkl
GenAI/RAG/faiss_store/e7cc105ae55174aa58739cc3668a7b34/: index.faiss  index.pkl
GenAI/RAG_FastAPI_UI_Deployment_Project/FASTAPI_v2/: Dockerfile  instructions.txt  notes.txt  requirements.txt
GenAI/RAG_FastAPI_UI_Deployment_Project/FASTAPI_v2/.ipynb_checkpoints/: deploy-checkpoint.sh  notes-checkpoint.txt
GenAI/RAG_FastAPI_UI_Deployment_Project/FASTAPI_v2/medical_app/: config.py  main.py
GenAI/RAG_FastAPI_UI_Deployment_Project/FASTAPI_v2/medical_app/.ipynb_checkpoints/: rag_service-checkpoint.py
GenAI/RAG_FastAPI_UI_Deployment_Project/UI/: Dockerfile  deploy_ui.sh
GenAI/RAG_FastAPI_UI_Deployment_Project/UI/.ipynb_checkpoints/: app-checkpoint.py
GenAI/RAG_Setup/: download_medical_pdfs.sh  step_04_query.py  step_05_cleanup.py
python_classes/: 0.2python_numpy.ipynb
