[project]
name = "aibees"
version = "0.1.0"
description = ""
authors = [
    {name = "srini"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (==0.3.27)",
    "python-dotenv (==1.1.1)",
    "langchain-google-genai (==2.1.12)",
    "numpy (==2.2.0)",
    "pandas (==2.2.2)",
    "streamlit (==1.50.0)",
    "pymupdf (==1.25.3)",
    "langchain-community (==0.3.27)",
    "faiss-cpu (==1.11.0)",
    "langchain-text-splitters (==0.3.9)",
    "nltk (==3.9.2)",
    "rouge-score (==0.1.2)",
    "bert-score (==0.3.13)",
    "sentence-transformers (==5.1.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
