[project]
name = "aibees"
version = "0.1.0"
description = ""
authors = [
    {name = "srini"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (==0.3.27)",
    "python-dotenv (==1.1.1)",
    "langchain-google-genai (==2.1.12)",
    "numpy (==2.2.0)",
    "pandas (==2.2.2)",
    "streamlit (==1.50.0)",
    "pymupdf (==1.25.3)",
    "langchain-community (==0.3.27)",
    "faiss-cpu (==1.11.0)",
    "langchain-text-splitters (==0.3.9)",
    "nltk (==3.9.2)",
    "rouge-score (==0.1.2)",
    "bert-score (==0.3.13)",
    "sentence-transformers (==5.1.2)",
    "ragas (==0.4.3)",
    "datasets (==4.0.0)",
    "deepeval (==3.8.9)",
    "google-genai (>=1.66.0,<2.0.0)",
    "fastapi (==0.115.0)",
    "uvicorn (==0.34.0)",
    "google-cloud-aiplatform (==1.94.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pypdf (==4.0.0)",
    "langchain-google-vertexai (>=2.0.12)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
